# floskell

./: .dir-locals.el  .gitignore  .travis.yml  CHANGELOG.md  CONFIGURATION.md  LICENSE.md  README.md  TEST.md  floskell.cabal  floskell.json  hindent.cabal  stack-haskell-src-exts-1.19.yaml  stack-haskell-src-exts-1.20.yaml  stack-haskell-src-exts-1.21.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
contrib/: floskell.coffee  floskell.el
scripts/: test-ghcs  update-fixities
src/: Floskell.hs  HIndent.hs
src/Floskell/: Attoparsec.hs  Buffer.hs  Comments.hs  Config.hs  ConfigFile.hs  Fixities.hs  Imports.hs  Pretty.hs  Printers.hs  Styles.hs  Types.hs
src/Floskell/Flex/: Config.hs  Pretty.hs  Printers.hs
src/Floskell/Styles/: ChrisDone.hs  Cramer.hs  Flex.hs  Fundamental.hs  Gibiansky.hs  JohanTibell.hs
src/HIndent/: Comments.hs  Pretty.hs  Types.hs
src/HIndent/Styles/: ChrisDone.hs  Cramer.hs  Fundamental.hs  Gibiansky.hs  JohanTibell.hs
src/main/: Benchmark.hs  Main.hs  Markdone.hs  Test.hs  TestGenerate.hs
styles/: base.md  chris-done.md  cramer.md  flex.md  fundamental.md  gibiansky.md  johan-tibell.md
test/: Spec.hs
test/cramer/expected/: import.exp
