name:                floskell
version:             0.9.0
synopsis:            A flexible Haskell source code pretty printer
description:         A flexible Haskell source code pretty printer.
                     .
                     See the Github page for usage\/explanation: <https://github.com/ennocramer/floskell>
license:             BSD3
stability:           Unstable
license-file:        LICENSE.md
author:              Chris Done, Andrew Gibiansky, Tobias Pflug, Pierre Radermecker, Enno Cramer
maintainer:          ecramer@memfrob.de
copyright:           2014 Chris Done, 2015 Andrew Gibiansky, 2016-2019 Enno Cramer
category:            Development
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://www.github.com/ennocramer/floskell
bug-reports:         https://github.com/ennocramer/floskell/issues
data-files:          contrib/floskell.el
                     contrib/floskell.coffee
extra-source-files:  README.md
                     CHANGELOG.md
                     BENCHMARK.md
                     TEST.md

source-repository head
    type:           git
    location:       https://github.com/ennocramer/floskell

library
  hs-source-dirs:    src/
  ghc-options:       -Wall
  exposed-modules:   Floskell
                     Floskell.Attoparsec
                     Floskell.Buffer
                     Floskell.Comments
                     Floskell.Config
                     Floskell.ConfigFile
                     Floskell.Fixities
                     Floskell.Pretty
                     Floskell.Printers
                     Floskell.Styles
                     Floskell.Types
  build-depends:     base >=4.9 && <4.13
                   , aeson >=0.11.3.0 && <1.4.3
                   , attoparsec >=0.13.1.0 && <0.13.3
                   , bytestring >=0.10.8.1 && <0.10.9
                   , containers >=0.5.7.1 && <0.6.1
                   , data-default >=0.7.1.1 && <0.7.2
                   , directory >=1.2.6.2 && <1.3.4
                   , filepath >=1.4.1.0 && <1.4.3
                   , haskell-src-exts >= 1.19 && < 1.22
                   , monad-dijkstra ==0.1.1.*
                   , mtl >=2.2.1 && <2.3
                   , text >=1.2.2.2 && <1.2.4
                   , transformers >=0.5.2.0 && <0.5.6
                   , unordered-containers >=0.2.8.0 && <0.2.11
                   , utf8-string >=1.0.1.1 && <1.0.2

executable floskell
  hs-source-dirs:    src/main
  ghc-options:       -Wall -Wno-missing-home-modules -optP-Wno-nonportable-include-path
  main-is:           Main.hs
  build-depends:     base >=4.9 && <4.13
                   , floskell
                   , aeson-pretty >=0.8.2 && <0.9
                   , bytestring >=0.10.8.1 && <0.10.9
                   , directory >=1.2.6.2 && <1.3.4
                   , ghc-prim >=0.5.0.0 && <0.5.4
                   , haskell-src-exts >= 1.19 && < 1.22
                   , optparse-applicative >=0.12.1.0 && <0.14.4
                   , text >=1.2.2.2 && <1.2.4

test-suite floskell-test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/main
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  main-is:           Test.hs
  other-modules:     Markdone
  build-depends:     base >=4.9 && <4.13
                   , floskell
                   , bytestring >=0.10.8.1 && <0.10.9
                   , deepseq >=1.4.2.0 && <1.4.5
                   , exceptions >=0.8.3 && <0.11
                   , haskell-src-exts >= 1.19 && < 1.22
                   , hspec >=2.2.4 && <2.8
                   , text >=1.2.2.2 && <1.2.4
                   , utf8-string >=1.0.1.1 && <1.0.2

benchmark floskell-bench
  type: exitcode-stdio-1.0
  hs-source-dirs:    src/main
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  main-is:           Benchmark.hs
  other-modules:     Markdone
  build-depends:     base >=4.9 && <4.13
                   , floskell
                   , bytestring >=0.10.8.1 && <0.10.9
                   , criterion >=1.1.1.0 && <1.5.5
                   , deepseq >=1.4.2.0 && <1.4.5
                   , exceptions >=0.8.3 && <0.11
                   , ghc-prim >=0.5.0.0 && <0.5.4
                   , haskell-src-exts >= 1.19 && < 1.22
                   , text >=1.2.2.2 && <1.2.4
                   , utf8-string >=1.0.1.1 && <1.0.2
