cabal-version:      >=1.10
name:               floskell
version:            0.11.1
license:            BSD3
license-file:       LICENSE.md
copyright:
    2014 Chris Done, 2015 Andrew Gibiansky, 2016-2023 Enno Cramer

maintainer:         ecramer@memfrob.de
author:
    Chris Done, Andrew Gibiansky, Tobias Pflug, Pierre Radermecker, Enno Cramer

stability:          Unstable
homepage:           https://github.com/ennocramer/floskell
bug-reports:        https://github.com/ennocramer/floskell/issues
synopsis:           A flexible Haskell source code pretty printer
description:
    A flexible Haskell source code pretty printer.
    .
    See the Github page for usage\/explanation: <https://github.com/ennocramer/floskell>

category:           Development
build-type:         Simple
data-files:
    contrib/floskell.el
    contrib/floskell.coffee

extra-source-files:
    README.md
    CHANGELOG.md
    BENCHMARK.md
    TEST.md
    stack.yaml
    styles/*.md

source-repository head
    type:     git
    location: https://github.com/ennocramer/floskell

library
    exposed-modules:
        Floskell
        Floskell.Attoparsec
        Floskell.Buffer
        Floskell.Comments
        Floskell.Config
        Floskell.ConfigFile
        Floskell.Fixities
        Floskell.Imports
        Floskell.Pretty
        Floskell.Printers
        Floskell.Styles
        Floskell.Types

    hs-source-dirs:   src/
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <4.20,
        aeson >=0.11.3.0 && <2.3,
        attoparsec >=0.13.1.0 && <0.15,
        attoparsec-aeson >=2.1.0.0 && <2.3,
        bytestring >=0.10.8.1 && <0.13,
        containers >=0.5.7.1 && <0.8,
        data-default >=0.7.1.1 && <0.8,
        directory >=1.2.6.2 && <1.4,
        filepath >=1.4.1.0 && <1.6,
        haskell-src-exts >=1.19 && <1.24,
        monad-dijkstra >=0.1.1 && <0.2,
        mtl >=2.2.1 && <2.4,
        text >=1.2.2.2 && <2.2,
        transformers >=0.5.2.0 && <0.7,
        unordered-containers >=0.2.8.0 && <0.3

executable floskell
    main-is:          Main.hs
    hs-source-dirs:   src/main
    default-language: Haskell2010
    ghc-options:
        -Wall -Wno-missing-home-modules -optP-Wno-nonportable-include-path

    build-depends:
        base >=4.9 && <4.20,
        floskell -any,
        aeson-pretty >=0.8.2 && <0.9,
        ansi-wl-pprint >=0.6.6 && <1.1,
        bytestring >=0.10.8.1 && <0.13,
        directory >=1.2.6.2 && <1.4,
        ghc-prim >=0.5.0.0 && <0.12,
        haskell-src-exts >=1.19 && <1.24,
        optparse-applicative >=0.12.1.0 && <0.19,
        text >=1.2.2.2 && <2.2

test-suite floskell-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   src/main
    other-modules:    Markdone
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.9 && <4.20,
        floskell -any,
        bytestring >=0.10.8.1 && <0.13,
        deepseq >=1.4.2.0 && <1.6,
        exceptions >=0.8.3 && <0.12,
        haskell-src-exts >=1.19 && <1.24,
        hspec >=2.2.4 && <2.12,
        text >=1.2.2.2 && <2.2

benchmark floskell-bench
    type:             exitcode-stdio-1.0
    main-is:          Benchmark.hs
    hs-source-dirs:   src/main
    other-modules:    Markdone
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.9 && <4.20,
        floskell -any,
        bytestring >=0.10.8.1 && <0.13,
        criterion >=1.1.1.0 && <1.7,
        deepseq >=1.4.2.0 && <1.6,
        exceptions >=0.8.3 && <0.11,
        ghc-prim >=0.5.0.0 && <0.12,
        haskell-src-exts >=1.19 && <1.24,
        text >=1.2.2.2 && <2.2
